--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.1",
+    "@mui/x-data-grid": "^7.16.0",
     "@phosphor-icons/react": "^2.1.7",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
-    "react-router-dom": "^6.26.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
