--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/x-data-grid": "^7.16.0",
     "@phosphor-icons/react": "^2.1.7",
     "@reduxjs/toolkit": "^2.2.7",
+    "@sentry/react": "^8.31.0",
+    "@sentry/vite-plugin": "^2.22.4",
     "axios": "^1.7.7",
     "history": "^5.3.0",
     "react": "^18.3.1",
